[package]
name = "objid"
version = "0.1.1"
authors = ["Niklas Rosencrantz <niklasr@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Generate a random object identifier."
keywords = ["random"]
repository = "https://github.com/montao/objid"
readme = "README.md"

[dependencies]
getopts = "0.2"
rand = "0.7"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "montao/objid" }