[package]
name = "spook"
version = "0.0.0"
authors = ["Niklas Rosencrantz <niklasr@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Spook in Rust via HTTP."
keywords = ["random"]
repository = "https://github.com/montao/spook"
readme = "README.md"

[dependencies]
getopts = "0.2"
rand = "0.7"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "montao/spook" }
