[package]
name = "spooks"
version = "0.1.1"
authors = ["Niklas Rosencrantz <niklasr@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Spook in Rust via HTTP."
keywords = ["random"]
repository = "https://github.com/montao/spook"
readme = "README.md"

[dependencies]
getopts = "0.2"
rand = "0.7"
easy_reader = "0.5.0"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "montao/spook" }
